--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
-<!-- CSS Stylesheets with Relative Paths -->
-<html lang="en-us">
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
-
-  <!-- This line is money! It points your HTML to the CSS file. -->
-  <!-- Notice the "relative" pathway? It matches a file inside our current directory's "assets" folder. Open it to see our style rules. -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>WeatherPy</title>
 </head>
 
 <body>
-
-  <header>
-    <h1>Student Bio</h1>
-  </header>
-
-  <main class="container">
-    <section id="main-bio">
-      <section id="figure">
-        <h2 id="bio-name">Your Name</h2>
-        <img id="bio-image" src="https://placehold.it/200x200" alt="Your Name">
-      </section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam. Nunc venenatis felis sit amet velit vehicula interdum. Vivamus iaculis condimentum nulla vitae dapibus.</p>
-    </section>
-
-    <aside id="contact-info">
-      <h2>Contact Info</h2>
-      <ul>
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-      </ul>
-    </aside>
-  </main>
-
+  <section>
+    <h1>WeatherPy</h1>
+    <article>
+    <a target="_blank" href="assets/images/cloudymap.png">
+      <img src="assets/images/cloudymap.png" alt="Cloudy Map">
+    </a>
+    <p><em>Cloudy Map</em></p>
+    </article>
+    <hr>
+    <article>
+    <a target="_blank" href="assets/images/humiditymap.png">
+    <img src="assets/images/humiditymap.png" alt="Humidity Map">
+    </a>
+    <p><em>Humidity Map</em></p>
+    </article>
+    <hr>
+    <article>
+      <a href="assets/images/temperaturemap.png">
+      <img target="_blank" src="assets/images/temperaturemap.png" alt="Tempurature Map">
+      </a>
+      <p><em>Temperature Map</em></p>
+    </article>
+    <hr>
+    <!-- an example using figure/ficaption -->
+    <figure>
+      <a target="_blank" href="assets/images/windmap.png">
+      <img src="assets/images/windmap.png" alt="Wind Map">
+      </a>
+      <figcaption><em>Wind Map</em></figcaption>
+    </figure>
+  </section>
 </body>
 
 </html>
