--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>WeatherPy</title>
+  <title>Activity 1: Basic HTML Bio</title>
 </head>
 
 <body>
-  <section>
-    <h1>WeatherPy</h1>
-    <article>
-    <a target="_blank" href="assets/images/cloudymap.png">
-      <img src="assets/images/cloudymap.png" alt="Cloudy Map">
-    </a>
-    <p><em>Cloudy Map</em></p>
-    </article>
-    <hr>
-    <article>
-    <a target="_blank" href="assets/images/humiditymap.png">
-    <img src="assets/images/humiditymap.png" alt="Humidity Map">
-    </a>
-    <p><em>Humidity Map</em></p>
-    </article>
-    <hr>
-    <article>
-      <a href="assets/images/temperaturemap.png">
-      <img target="_blank" src="assets/images/temperaturemap.png" alt="Tempurature Map">
-      </a>
-      <p><em>Temperature Map</em></p>
-    </article>
-    <hr>
-    <!-- an example using figure/ficaption -->
-    <figure>
-      <a target="_blank" href="assets/images/windmap.png">
-      <img src="assets/images/windmap.png" alt="Wind Map">
-      </a>
-      <figcaption><em>Wind Map</em></figcaption>
-    </figure>
-  </section>
+
+  <h1>Your Name</h1>
+
+  <img src="https://placehold.it/200x200" alt="Your Name">
+
+  <p>Write a short paragraph about yourself or some placeholder text.</p>
+  <p>A second short paragraph about yourself or some placeholder text.</p>
+
+  <ul>
+    <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+  </ul>
+
+  <table>
+    <tr>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+    </tr>
+    <tr>
+      <td>The Hobbit</td>
+      <td>Hot Fuzz</td>
+      <td>Dark Souls</td>
+    </tr>
+    <tr>
+      <td>The Name of the Wind</td>
+      <td>The Avengers</td>
+      <td>The Last of Us</td>
+    </tr>
+    <tr>
+      <td>The Girl With All the Gifts</td>
+      <td>The Matrix</td>
+      <td>Dragon Age: Origins</td>
+    </tr>
+  </table>
+
+  <!-- Bonus link to last class page -->
+  <a href="../../../../1/Activities/04-Stu_MyFirst_HTML/Solved/my-first-bonus.html">My First HTML Bonus</a>
+
 </body>
 
 </html>
