--- a/Data.html
+++ b/Data.html
@@ -2,57 +2,57 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Web Visualization Dashboard</title>
+  <meta charset="UTF-8">
+  <title>Web Visualization Dashboard</title>
     
-    <!-- Bring in our bootstrap stylesheet -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Bring in our bootstrap stylesheet -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
-    <!--customised style sheet-->
-    <link rel="stylesheet" href="style.css">
+  <!--customised style sheet-->
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <!--creating a layout for the page-->
-    <div class="container">
-        <div class="row">
-          <div class="col-sm">
-              <!--adding a nav(brand)-->
-            <nav class="navbar navbar-light bg-light">
-                <button type="button" class="btn btn-info">Latitude</button>
-                <!--adding nav content-->
-                <!--Dropdown-->
-                <ul class="nav nav-pills">
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">Plots</a>
-                      <div class="dropdown-menu">
-                        <a class="dropdown-item" href="MaxTemperature.html">Max Temperature</a>
-                        <a class="dropdown-item" href="Humidity.html">Humidity</a>
-                        <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="Comparision.html">Comparision</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="Data.html">Data</a>
-                    </li>
-                  </ul>                  
-              </div>    
-            </nav>
-        </div>
-        <!--formatting the layout for the table-->
-        <div class="p-3 mb-2 bg-light text-dark">
-          <div class="p-3 mb-2 bg-white text-dark">
-            <div class="col-sm"></div>
+  <!--creating a layout for the page-->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+      <!--adding a nav(brand)-->
+        <nav class="navbar navbar-light bg-light">
+          <a class="btn btn-primary" href="index.html" role="button">Latitude</a>
+          <!--adding nav content-->
+          <!--Dropdown-->
+            <ul class="nav nav-pills">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" id="colornav">Plots</a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="MaxTemperature.html">Max Temperature</a>
+                  <a class="dropdown-item" href="Humidity.html">Humidity</a>
+                  <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
+                  <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Comparision.html" id="colornav">Comparision</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Data.html" id="colornav">Data</a>
+              </li>
+            </ul>
+        </nav>
+      </div>
+    </div>
+    <!--formatting the layout for the table-->
+    <div class="p-3 mb-2 bg-light text-dark">
+      <div class="p-3 mb-2 bg-white text-dark">
+        <div class="col-sm"></div>
             <div class="col-sm">
             <div class="row">
-              <h3>DATA</h3>
+              <h3 id="just">DATA</h3>
               <hr>
             </div>
             <div class="row">
-              <h5>The following table includes all of he data used for plotting during this project</h5>
+              <h6>The following table includes all of he data used for plotting during this project</h6>
           </div>
           <div class="row">
             <!--enter table.html here-->
@@ -7188,13 +7188,13 @@
             </table>
           </div>
           </div>
-          <div class="col-sm"></div>
+          <div class="col-sm">
           </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
