--- a/Humidity.html
+++ b/Humidity.html
@@ -51,7 +51,7 @@
                     <hr>
                         <img src="../Resources/assets/images/Fig2.png" class="align-self-start mr-3" height="400" width="600">
                     <!--adding content to the web page-->
-                        <p>No relation</p>
+                        <p>While the Temperature clearly has a strong relationship with Latitude. There is no strong relationship between latitude and humidity. However there is a slightly larger cluster of northern hemisphere cities with high humidity (above 60% humidity)</p>
                 </div>
             </div>  
             <!--COL2/VISUALIZATION-->      
