--- a/WindSpeed.html
+++ b/WindSpeed.html
@@ -50,7 +50,7 @@
                         <hr>
                         <img src="../Resources/assets/images/Fig4.png" class="align-self-start mr-3" height="400" width="600">
                         <!--adding content to the web page-->
-                            <p>No relation</p>
+                            <p>While we see a strong relationship between temperature and latitude.There is no strong relationship between latitude and wind speed. However, the cities with wind speeds over 15 mph increase when you move either direction away from the equator.</p>
                     </div>
                 </div>  
                 <!--COL2/VISUALIZATION-->      
