--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -51,7 +51,7 @@
                     <hr>
                         <img src="../Resources/assets/images/Fig3.png" class="align-self-start mr-3" height="400" width="600">
                         <!--adding content to the web page-->
-                        <p>No relation</p>
+                        <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). There is no strong relationship between latitude and cloudiness. However, it is interesting to see that a strong band of cities near 0, 80, and 90% cloudiness</p>
                     </div>
                 </div>  
                 <!--COL2/VISUALIZATION-->      
